Cleanup 1 (#34)
* Doc re arrange.
---------

Co-authored-by: Anish Khanzode <akhanzode@voltactivedata.com>